--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-router-dom": "^7.8.2",
+    "react-swipeable": "^7.0.2",
     "tailwindcss": "^4.1.12",
     "zod": "^4.1.1"
   },
